fixed long tweets overflowing the container

--- a/public/styles/tweet.css
+++ b/public/styles/tweet.css
@@ -43,6 +43,7 @@
 .tweet-text{
   height: 80px;
   padding: 10px;
+  word-wrap: break-word;
 }
 
 .user-id {
